--- a/web_travel/templates/index.html
+++ b/web_travel/templates/index.html
@@ -5,7 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <p>{{ item }}</p>
-    <p>{{ countries }}</p>
+    <p>{{ users }}</p>
+    <br>
+    <p>{{ country }}</p>
+    <br>
+    <p>{{ city }}</p>
+    <br>
+    <p>{{ place }}</p>
 </body>
 </html>
