--- a/web_travel/templates/admin/add-country.html
+++ b/web_travel/templates/admin/add-country.html
@@ -1,6 +1,15 @@
 {% include 'base.html'%}
 
 {% block content %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class="alert alert-danger" role="alert">
+            {% for message in messages %}
+                {{ message }}<br>
+            {% endfor %}
+        </div>
+        {% endif %}
+    {% endwith %}
     <div class="row">
         <div class="col-8">
             <form action="{{ url_for('admin.adding_country') }}" method='POST'>
