--- a/web_travel/templates/city/add-city.html
+++ b/web_travel/templates/city/add-city.html
@@ -12,15 +12,15 @@
     {% endwith %}
     <div class="row">
         <div class="col-8">
-            <form action="" method='POST'>
+            <form action="{{ url_for('city.adding_city') }}" method='POST'>
                 {{ form.hidden_tag() }}
                 <div class="form-group">
-                    {{ form.city_name.label }}
-                    {{ form.city_name() }}
+                    {{ form.city.label }}
+                    {{ form.city() }}
                 </div>
                 <div class="form-group">
-                    {{ form.country_name.label }}
-                    {{ form.country_name() }}
+                    {{ form.country.label }}
+                    {{ form.country() }}
                 </div>
                 {{ form.submit() }}
             </form>
