--- a/web_travel/templates/country/add-country.html
+++ b/web_travel/templates/country/add-country.html
@@ -12,7 +12,7 @@
     {% endwith %}
     <div class="row">
         <div class="col-8">
-            <form action="{{ url_for('country.adding_process') }}" method='POST'>
+            <form action="{{ url_for('country.adding_country') }}" method='POST'>
                 {{ form.hidden_tag() }}
                 <div class="form-group">
                     {{ form.country_name.label }}
