--- a/web_travel/templates/place/add-place.html
+++ b/web_travel/templates/place/add-place.html
@@ -23,6 +23,10 @@
                     {{ form.description() }}
                 </div>
                 <div class="form-group">
+                    {{ form.country_input_method.label }}
+                    {{ form.country_input_method() }}
+                </div>
+                <div class="form-group">
                     {{ form.country.label }}
                     {{ form.country() }}
                 </div>
