--- a/web_travel/templates/main/index.html
+++ b/web_travel/templates/main/index.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class="alert alert-success" role="alert">
+            {% for message in messages %}
+                {{ message }}<br>
+            {% endfor %}
+        </div>
+        {% endif %}
+    {% endwith %}
     <div class="row">
         <div class="col-8">
             <h1>{{ text }}</h1>
