--- a/web_travel/templates/menu.html
+++ b/web_travel/templates/menu.html
@@ -22,7 +22,7 @@
               </li>
               {% if current_user.is_admin %}
                   <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('admin.admin_index') }}">Administration Page</a>
+                    <a class="nav-link" href="{{ url_for('admin.index') }}">Administration Page</a>
                   </li>
               {% endif %}
               <li class="nav-item">
