--- a/web_travel/templates/admin/places_list.html
+++ b/web_travel/templates/admin/places_list.html
@@ -18,6 +18,7 @@
                         <th>Name</th>
                         <th>Country</th>
                         <th>City</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tfoot>
@@ -25,6 +26,7 @@
                         <th>Name</th>
                         <th>Country</th>
                         <th>City</th>
+                        <th>Action</th>
                     </tr>
                 </tfoot>
             </table>
