--- a/web_travel/templates/menu.html
+++ b/web_travel/templates/menu.html
@@ -11,10 +11,10 @@
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+{#      <form class="form-inline my-2 my-lg-0">#}
+{#          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">#}
+{#          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
+{#      </form>#}
       <ul class="navbar-nav">
           {% if current_user.is_authenticated %}
               <li class="nav-item">
