--- a/web_travel/templates/user/login.html
+++ b/web_travel/templates/user/login.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{#    {% with messages = get_flashed_messages() %}#}
-{#        {% if messages %}#}
-{#            <div class="alert alert-warning" role="alert">#}
-{#                {% for message in messages %}#}
-{#                    {{ message }}<br>#}
-{#                {% endfor %}#}
-{#            </div>#}
-{#        {% endif %}#}
-{#    {% endwith %}#}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="alert alert-warning" role="alert">
+                {% for message in messages %}
+                    {{ message }}<br>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
     <div class="row">
         <div class="col-4">
             <form action="{{ url_for('user.process_login') }}" method="post">
