finalize admin_panel

--- a/web_travel/templates/admin/index.html
+++ b/web_travel/templates/admin/index.html
@@ -15,6 +15,8 @@
         <a href="{{ url_for('admin.places_list') }}"> Редактировать места</a>
         <br>
         <a href="{{ url_for('admin.cities_list') }}"> Редактировать города</a>
+        <br>
+        <a href="{{ url_for('admin.countries_list') }}"> Редактировать страны</a>
         </div>
         <div class="col-4"></div>
     </div>
